bin_PROGRAMS = hipercontracer

hipercontracer_SOURCES = hipercontracer.cc \
icmpheader.h \
ipv4header.h \
ipv6header.h \
traceserviceheader.h \
traceroute.cc \
traceroute.h \
service.h \
ping.cc \
ping.h
hipercontracer_LDADD = -lboost_system -lboost_thread -lboost_date_time -lpthread

dist_man_MANS = hipercontracer.1
