#############################################################################
#### EXAMPLES                                                            ####
#############################################################################

INSTALL(FILES
           README-MongoDB.md
           R-query-example.R
           mongodb-database.ms
           mongodb-schema.ms
           mongodb-test.ms
           mongodb-users.ms
           nornet-tools.R
        DESTINATION ${CMAKE_INSTALL_DATADIR}/hipercontracer/NoSQL)
